--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "require": {
         "php": ">=5.5.0",
-        "guzzlehttp/guzzle": "^7.0.1"
+        "guzzlehttp/guzzle": "^6.5.5 || ^7.0.1",
+        "illuminate/http": "~8.0"
     },
     "autoload": {
         "psr-4": {
